# SceneLift

./: .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
docs/: agent-guidelines.md  backend-decision.md  ben2-end-to-end.md  ben2-performance.md  benchmarking.md  birefnet-onnx.md  calibration-set.md  directory-inputs.md  frame-extraction.md  healthcheck.md  int8-quantization.md  lol.md  mediapipe-selfie-segmentation.md  model-directory-layout.md  model-pull-all.md  modnet-end-to-end.md  naming-ideas.md  next-steps.md  onnx-exporters.md  opensource-review.md  rvm.md  scene-lift-positioning.md  tensorrt-engine-builds.md  tensorrt-live-pipeline.md  tensorrt-upgrade.md  u2net-human-seg.md  upscaling-realesrgan.md
docs/README/: Heading.md  InstallCommands.md
docs/README/RealESRGAN/: Heading.md
docs/assets/sliders/: make-slider.sh
models/ben2/: build_engine.py  fetch.py  runtime.py
models/modnet/: build_engine.py  export_onnx.py  fetch.py  runtime.py  zero_copy.py
src/background_removal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bgremoval/: __init__.py  api.py  benchmark.py  calibration_set.py  cli.py  extract_frames.py  health.py  healthcheck.py  io.py  live.py  logging_controller.py  methods.py  pipeline.py
src/bgremoval/models/: __init__.py  base.py  hf_onnx.py  pull_all.py  registry.py  support.py
src/bgremoval/models/backends/: __init__.py  birefnet.py  grabcut.py  hf_onnx_segmentation.py  mediapipe_selfie_segmentation.py  rembg_backend.py  rvm.py  u2net_human_seg.py
src/bgremoval/models/ben2/: __init__.py  benchmark.py  build_all.py  build_engine.py  fetch.py  runtime.py
src/bgremoval/models/exporters/: __init__.py  birefnet.py  common.py  modnet.py
src/bgremoval/models/modnet/: README.md  __init__.py  build_engine.py  export_onnx.py  official.py  runtime.py  trt_backend.py  xenova.py  zero_copy.py
src/bgremoval/models/tensorrt/: __init__.py  build_all.py  build_int8.py  calibration.py  session.py
src/bgremoval/models/weights/: README.md
src/bgremoval/models/weights/mediapipe-selfie-segmentation/: preprocessor_config.json
src/bgremoval/upscale/: __init__.py  base.py  benchmark.py  cli.py  health.py  healthcheck.py  pipeline.py  registry.py
src/bgremoval/upscale/backends/: __init__.py  realesrgan.py
